<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/GridMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxHeight="@dimen/fab_margin"

                android:padding="8dp"
                app:columnCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rowCount="2">

                <EditText
                    android:id="@+id/Player_One"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/edit_text"
                    android:focusableInTouchMode="true"
                    android:hint="@string/player_one"
                    android:imeOptions="actionSend"
                    android:inputType="textPersonName"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1" />

                <EditText
                    android:id="@+id/Player_Two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/edit_text"
                    android:focusableInTouchMode="true"
                    android:hint="@string/player_two"
                    android:inputType="textPersonName"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1" />
                <Button
                    android:onClick="getText"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button"
                    android:text="@string/ok"/>

                <Button
                    android:id="@+id/get_image_player_1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    android:text="@string/choose_image"
                    android:visibility="gone"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"/>

                <Button
                    android:id="@+id/get_image_player_2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    android:text="@string/choose_image"
                    android:visibility="gone"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1" />
            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/Game_Layout"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:maxHeight="@dimen/fab_margin"
                android:padding="8dp"
                app:columnCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GridMedia"
                app:rowCount="3">


                <androidx.cardview.widget.CardView
                    android:id="@+id/card00"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@animator/animate_scale"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image00"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card01"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@animator/animate_scale"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card02"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card10"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card11"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image11"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card12"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card20"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image20"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card21"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image21"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card22"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:translationZ="-1dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="MakeAMove"
                    android:stateListAnimator="@drawable/animate_scale"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image22"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>


            </androidx.gridlayout.widget.GridLayout>

            <LinearLayout
                android:id="@+id/Button_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Game_Layout">

                <Button
                    android:id="@+id/Reset"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    android:text="@string/reset"
                    tools:layout_editor_absoluteX="28dp"
                    tools:layout_editor_absoluteY="447dp" />

                <Button
                    android:id="@+id/Player"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:text="@string/player"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    tools:layout_editor_absoluteX="28dp"
                    tools:layout_editor_absoluteY="447dp" />

                <Button
                    android:id="@+id/AI"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:text="@string/ai"
                    android:layout_margin="3dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    tools:layout_editor_absoluteX="28dp"
                    tools:layout_editor_absoluteY="447dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Button_Layout">

                <Button
                    android:id="@+id/Retard_Mode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:text="@string/retard_mode"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Button_Layout" />

                <Button
                    android:id="@+id/Normal_Mode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:layout_margin="3dp"
                    android:padding="8dp"
                    android:text="@string/normal_mode"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Button_Layout" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>